change configurator initialisation